// task_management_service/proto/task_management.proto

syntax = "proto3";

package task_management;

service TaskManagementService {
    rpc CreateTask(TaskRequest) returns (TaskResponse);
    rpc GetTaskById(TaskIdRequest) returns (TaskResponse);
    rpc UpdateTaskStatus(TaskStatusUpdateRequest) returns (TaskStatusResponse);
    rpc ListTasks(TasksRequest) returns (TasksResponse);
}

message TaskRequest {
    string description = 1;
    string task_type = 2;
    string payload = 3;
}

message TaskResponse {
    int32 id = 1;
    string description = 2;
    string task_type = 3;
    string status = 4;
    string payload = 5;
    string result = 6;  // Added result field
}

message TaskIdRequest {
    int32 id = 1;
}

message TaskStatusUpdateRequest {
    int32 task_id = 1;
    string status = 2;
    string result = 3;  // Added result field
}

message TaskStatusResponse {
    bool success = 1;
}

message TasksRequest {
    int32 page_number = 1;
    int32 page_size = 2;
}

message TasksResponse {
    repeated TaskResponse tasks = 1;
}
